--- a/css/idc.css
+++ b/css/idc.css
@@ -212,6 +212,7 @@ textarea {
 .site-main {
     height: 100%;
     /*background: #fff;*/
+    margin-bottom: 48px;
     -webkit-transition: -webkit-transform 150ms cubic-bezier(.2, .3, .25, .9);
     transition: transform 150ms cubic-bezier(.2, .3, .25, .9);
 }
@@ -458,7 +459,7 @@ textarea {
 .ad {
     padding: 0;
     width: 100%;
-    height: 310px;
+    height: auto!important;
     position: relative;
 }
 
@@ -543,7 +544,7 @@ ol.flex-control-nav li a.flex-active {
 
 .flex-container .content-banner {
     width: 1200px;
-    height: 310px;
+    /* height: 310px; */
     overflow: hidden;
     position: relative;
     margin: 0 auto;
@@ -553,10 +554,10 @@ ol.flex-control-nav li a.flex-active {
     border: 0;
 }
 .flex-container .slides {
-    height: 310px;
+    /* height: 310px; */
 }
 .flex-container .slides li img {
-    height: 310px;
+    /* height: 310px; */
 }
 
 /* 主体内容 */
