github raw img resources

--- a/css/idc.css
+++ b/css/idc.css
@@ -246,7 +246,8 @@ textarea {
     height: 45px;
     margin: 9px 0px 9px 100px;
     overflow: hidden;
-    background-image: url('../img/logo.png');
+    /*background-image: url('../img/logo.png');*/
+    background-image: url('http://raw.githubusercontent.com/idatacool/photons/master/share/cdn/img/photons/logo.png');
     background-repeat: no-repeat;
     vertical-align: top;
     display: inline-block;
